--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 header{
     height: 80px;
-    background-color: #1C2B35
-    ;
+    background-color: #1c2b35;
+    display: flex;
+    justify-content: space-between;
 }
