--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,4 +3,16 @@ header{
     background-color: #1c2b35;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+nav.header a{
+    text-decoration: none;
+    color: #FFFFFF;
+    margin-left: 30px;
+}
+nav.header a:hover{
+    color: orange;
 }
